--- a/4. Complete Front-End Tasks/tasks/1-to-do-list.html
+++ b/4. Complete Front-End Tasks/tasks/1-to-do-list.html
@@ -18,3 +18,267 @@
 	Your task will be judged on the functioning of the application and the styling of the components. A very show-off or glamorous interface is not what we expect,
 	but just a neat user interface using which is not a hassle is well-appreciated.
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>To-Do List</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+			margin: 0;
+			background-color: rgb(196, 248, 252);
+		}
+
+		.todo-container {
+			background-color: rgb(178, 255, 142);
+			border: 2px solid black;
+			padding: 20px;
+			border-radius: 8px;
+			box-shadow: 0px 0px 50px rgb(1, 189, 180);
+			width: 500px;
+			height: 500px;
+		}
+
+		.input-area {
+			display: flex;
+			margin-bottom: 20px;
+			padding: 10px; 
+			border: 2px solid black; 
+			border-radius: 8px; 
+			background-color:aquamarine; 
+		}
+
+		#task-input {
+			flex: 1;
+			padding: 10px;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			background-color: aqua;
+		}
+
+		#add-task-button {
+			padding: 10px;
+			border: none;
+			background-color: #28a745;
+			color: #fff;
+			border-radius: 4px;
+			cursor: pointer;
+			margin-left: 10px;
+		}
+
+		#task-list {
+			list-style: none;
+			padding: 10px;
+			border: 2.5px solid black;
+			border-radius: 8px;
+			margin-top: 20px;
+			background-color: aquamarine;
+		}
+
+		.task-item {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			padding: 20px;
+			border: 1.5px solid black;
+			border-radius: .5rem;
+			margin-bottom: 10px;
+			background-color: rgba(114, 242, 251, 0.824);
+		}
+
+		.task-item .task-text {
+			word-wrap: break-word;
+			overflow-wrap: break-word;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			flex: 1;
+			padding-right: 10px;
+			cursor: pointer;
+			color: rgb(0, 157, 255);
+		}
+
+		.task-item .task-text-inner {
+			text-decoration: none;
+		}
+
+		.task-item.completed .task-text-inner {
+			text-decoration: line-through;
+			color: #ccc;
+		}
+
+		.task-buttons {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			margin-left: 10px;
+			position: relative;
+			width: 80px;
+		}
+
+		.task-buttons::before {
+			content: '|';
+			position: absolute;
+			left: -30px;
+			color: gray;
+			font-size: 50px;
+			line-height: 1;
+			height: 100%; 
+			display: flex;
+			align-items: center;
+		}
+
+		.task-buttons button {
+			font-size: 13px;
+			border: 1px solid gray;
+			border-radius: 2rem;
+			margin-top: 5px;
+			width: 100%;
+		}
+
+
+		.modal {
+			display: none;
+			position: fixed;
+			z-index: 1;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			overflow: auto;
+			background-color: rgba(0, 0, 0, 0.4);
+			justify-content: center;
+			align-items: center;
+		}
+
+		.modal-content {
+			background-color: #fefefe;
+			padding: 20px;
+			border: 1px solid #888;
+			width: 80%;
+			max-width: 500px;
+			border-radius: 8px;
+			word-wrap: break-word;
+			overflow-wrap: break-word;
+			white-space: normal;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+
+		.close {
+			color: #aaa;
+			float: right;
+			font-size: 28px;
+			font-weight: bold;
+		}
+
+		.close:hover,
+		.close:focus {
+			color: black;
+			text-decoration: none;
+			cursor: pointer;
+		}
+
+		.task-buttons .check-button.checked {
+			background-color: green;
+			color: white;
+		}
+	</style>
+	<script>
+		document.addEventListener('DOMContentLoaded', function () {
+			document.getElementById('add-task-button').addEventListener('click', function () {
+				const taskInput = document.getElementById('task-input');
+				const taskText = taskInput.value.trim();
+
+				if (taskText !== '') {
+					const taskList = document.getElementById('task-list');
+					const taskItem = document.createElement('li');
+					taskItem.className = 'task-item';
+					taskItem.innerHTML = `
+                        <span class="task-text"><span class="task-text-inner">${taskText}</span></span>
+                        <div class="task-buttons">
+                            <button class="check-button">Check</button>
+                            <button class="delete-button">Delete</button>
+                        </div>
+                    `;
+
+					taskList.appendChild(taskItem);
+					taskInput.value = '';
+
+					const taskTextElement = taskItem.querySelector('.task-text');
+					taskTextElement.addEventListener('click', function () {
+						const modal = document.getElementById('myModal');
+						const modalText = document.getElementById('modal-text');
+						modalText.textContent = taskText;
+						modal.style.display = 'flex';
+					});
+
+					const checkButton = taskItem.querySelector('.check-button');
+					checkButton.addEventListener('click', function () {
+						taskItem.classList.toggle('completed');
+						checkButton.classList.toggle('checked');
+						if (taskItem.classList.contains('completed')) {
+							checkButton.textContent = 'Checked';
+						} else {
+							checkButton.textContent = 'Check';
+						}
+					});
+
+					taskItem.querySelector('.delete-button').addEventListener('click', function () {
+						if (confirm('Are you sure you want to delete this task?')) {
+							taskList.removeChild(taskItem);
+						}
+					});
+				}
+			});
+
+
+			const modal = document.getElementById('myModal');
+
+
+			const span = document.getElementsByClassName('close')[0];
+
+
+			span.onclick = function () {
+				modal.style.display = 'none';
+			}
+
+
+			window.onclick = function (event) {
+				if (event.target == modal) {
+					modal.style.display = 'none';
+				}
+			}
+		});
+	</script>
+</head>
+
+<body>
+	<div class="todo-container">
+		<h1>To-Do List</h1>
+		<div class="input-area">
+			<input type="text" id="task-input" placeholder="Enter a new task">
+			<button id="add-task-button">Add Task</button>
+		</div>
+		<ul id="task-list"></ul>
+	</div>
+
+
+	<div id="myModal" class="modal">
+		<div class="modal-content">
+			<span class="close">&times;</span>
+			<p id="modal-text"></p>
+		</div>
+	</div>
+</body>
+
+</html>
