--- a/4. Complete Front-End Tasks/tasks/2-timer-application.html
+++ b/4. Complete Front-End Tasks/tasks/2-timer-application.html
@@ -18,3 +18,219 @@
 
 	While your task will be judged on how you have applied the functionality, your task will also be jedged on the styles you have used.
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Timer Application</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			height: 100vh;
+			margin: 0;
+			background-color: rgb(236, 255, 208);
+		}
+
+		.timer-container {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			padding: 10px;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			background-color: rgb(76, 219, 245);
+			width: 200px; 
+		}
+
+		.input-area {
+			padding: 15px;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			text-align: center;
+			margin: 5px;
+			font-size: 16px;
+			background-color: aqua;
+		}
+
+		.input-fields {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			margin-bottom: 10px;
+
+		}
+
+		.input-area input {
+			width: 80px;
+			padding: 15px;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			text-align: center;
+			margin: 5px;
+			font-size: 16px;
+		}
+
+		.input-area button {
+			padding: 10px;
+			border: none;
+			background-color: #28a745;
+			color: #fff;
+			border-radius: 4px;
+			cursor: pointer;
+			margin-top: 10px;
+			font-size: 20px;
+		}
+
+		.timer {
+			font-size: 40px;
+			margin-bottom: 10px;
+			background-color: rgb(76, 219, 245);
+			padding: 10px;
+			border-radius: 4px;
+		}
+
+		.timer-buttons button {
+			padding: 10px;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+			margin: 5px;
+		}
+
+		.pause-button {
+			background-color: #ffc107;
+			color: #fff;
+			padding: 15px;
+			font-size: 18px;
+		}
+
+		.delete-button {
+			background-color: #dc3545;
+			color: #fff;
+			padding: 15px;
+			font-size: 18px;
+		}
+
+		.resume-button {
+			background-color: #28a745;
+			color: #fff;
+			padding: 15px;
+			font-size: 18px;
+		}
+
+		.title {
+		
+			font-weight: bold;
+			font-size: 50px;
+			margin-bottom: 20px;
+			text-align: center;
+		}
+
+		.timers {
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+			justify-content: center;
+			gap: 10px;
+			margin-top: 20px;
+			max-width: 1000px; 
+		}
+	</style>
+</head>
+
+<body>
+	<div class="title">Timer Application</div>
+	<div class="input-area" id="input-area">
+		<div class="input-fields">
+			<input type="number" id="hr" placeholder="HH" min="0">
+			<input type="number" id="min" placeholder="MM" min="0" max="60">
+			<input type="number" id="sec" placeholder="SS" min="0" max="60">
+		</div>
+		<button id="start-timer">Start Timer</button>
+	</div>
+	<div id="timers" class="timers"></div>
+
+	<script>
+		document.getElementById('start-timer').addEventListener('click', function () {
+			const hr = parseInt(document.getElementById('hr').value) || 0;
+			const min = parseInt(document.getElementById('min').value) || 0;
+			const sec = parseInt(document.getElementById('sec').value) || 0;
+			let totalsec = hr * 3600 + min * 60 + sec;
+
+			if (totalsec > 0) {
+				createTimer(totalsec);
+			}
+		});
+
+		function createTimer(totalsec) {
+			const timerContainer = document.getElementById('timers');
+			const timerElement = document.createElement('div');
+			timerElement.className = 'timer-container';
+			timerElement.innerHTML = `
+                <div class="timer">${formatTime(totalsec)}</div>
+                <div class="timer-buttons">
+                    <button class="pause-button">Pause</button>
+                    <button class="delete-button">Delete</button>
+                </div>
+            `;
+			timerContainer.appendChild(timerElement);
+
+			let interval = setInterval(() => {
+				if (totalsec > 0) {
+					totalsec--;
+					timerElement.querySelector('.timer').textContent = formatTime(totalsec);
+				} else {
+					clearInterval(interval);
+					timerElement.querySelector('.timer').textContent = 'Time\'s up!';
+					timerElement.style.backgroundColor = '#ffcccc';
+					alert('Time\'s up!');
+				}
+			}, 1000);
+
+			timerElement.querySelector('.pause-button').addEventListener('click', function () {
+				if (this.textContent === 'Pause') {
+					clearInterval(interval);
+					this.textContent = 'Resume';
+					this.classList.remove('pause-button');
+					this.classList.add('resume-button');
+				} else {
+					interval = setInterval(() => {
+						if (totalsec > 0) {
+							totalsec--;
+							timerElement.querySelector('.timer').textContent = formatTime(totalsec);
+						} else {
+							clearInterval(interval);
+							timerElement.querySelector('.timer').textContent = 'Time\'s up!';
+							timerElement.style.backgroundColor = '#ffcccc';
+							alert('Time\'s up!');
+						}
+					}, 1000);
+					this.textContent = 'Pause';
+					this.classList.remove('resume-button');
+					this.classList.add('pause-button');
+				}
+			});
+
+			timerElement.querySelector('.delete-button').addEventListener('click', function () {
+				clearInterval(interval);
+				timerContainer.removeChild(timerElement);
+			});
+		}
+
+		function formatTime(totalsec) {
+			const hr = Math.floor(totalsec / 3600);
+			const min = Math.floor((totalsec % 3600) / 60);
+			const sec = totalsec % 60;
+			return `${String(hr).padStart(2, '0')}:${String(min).padStart(2, '0')}:${String(sec).padStart(2, '0')}`;
+		}
+	</script>
+</body>
+
+</html>
